<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~     Copyright (c) 2020. by Darshan. All rights reserved                                                 ~
  ~                                                                                                         ~
  ~     The file "strings.xml" is a part of the project "Quit"                                              ~
  ~                                                                                                         ~
  ~     Quit is free software: you can redistribute it and/or modify                                        ~
  ~     it under the terms of the GNU General Public License as published by                                ~
  ~     the Free Software Foundation, either version 3 of the License, or                                   ~
  ~     (at your option) any later version.                                                                 ~
  ~                                                                                                         ~
  ~     Project Quit is distributed in the hope that it will be useful,                                     ~
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of                                      ~
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                                       ~
  ~     GNU General Public License for more details.                                                        ~
  ~                                                                                                         ~
  ~     You should have received a copy of the GNU General Public License                                   ~
  ~     along with Project Quit.  If not, see <https://www.gnu.org/licenses/>.                              ~
  ~                                                                                                         ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--    Strings  -->
<resources>
    <string name="app_name">Quit</string>
    <string name="about_project">Project Quit</string>
    <string name="app_motto">Ready to help!</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Darshan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    Menu Titles -->
    <string name="menu_home">Home</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_facilities">Facilities</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_policies">Policies</string>
    <string name="menu_share">Share</string>

    <string name="icon">icon</string>
    <string name="options">Options</string>
    <string name="application">Application</string>
    <string name="splash">Splash Image</string>
    <string name="image">image</string>
    <string name="dummy">dummy</string>
    <string name="times_unlocked">Unlocked</string>
    <string name="time_used">Usage</string>
    <string name="times_unlocked_progress">Unlocks in past days</string>
    <string name="time_used_progress">Usage in past days</string>
    <string name="progress_header">Statistics</string>
    <string name="share_frag">Spread the love</string>
    <string name="share_message">Do you think this application helped you?\nWant to help your friends and family too?\nThen Spread the LOVE.\nClick the button below 👇</string>
    <string name="support_us">Support us </string>
    <string name="support_message">Support our mission. Please leave your review on the store. Tap here to leave the rating 🌟</string>
    <string name="unlocked_times_profile">Times Unlocked :</string>
    <string name="usage_times_profile">Usage Time :</string>
    <string name="notification_title">Running Quit</string>
    <string name="notification_text">Ready to help !</string>
    <string name="OverlayText">Habit Manager</string>
    <string name="here_are_your_stats">Here are your stats</string>
    <string name="ok">Okay</string>
    <string name="tncs">Terms and Conditions of usage</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="set_rest_alert">Set Rest Alert</string>
    <string name="about_info">
        \tProject Quit is the first of its kind habit monitoring software designed to understand the user\'s mobile usage patters.\n
        \tIt uses various services and functions to obtain and process the device usage patterns. It then labels the user accordingly.\n
        The features of the app include:\n
            \t➔ Usage Statistics graph\n
            \t➔ Times-Unlocked Graph\n
            \t➔ Periodic reminder\n
            \t➔ Motivational Notifications\n
            \t➔ Recommendations and much more…
    </string>
    <string name="login2">Let\'s get you started.\nContinue by logging-in the app.</string>
    <string name="login1">All Set 🎉 </string>
    <string name="make_profile_1">Let\'s make your profile ✌️</string>
    <string name="profile_hint_name">Your Name</string>
    <string name="profile_hint_profession">Profession</string>
    <string name="profile_hint_age">Age</string>
    <string name="profile_hint_gender">Gender</string>
    <string name="profile_hint_picture">Profile Picture</string>
    <string name="current_status">Current Status</string>
    <string name="save">Save</string>
    <string name="description_usage">Usage Statistics</string>
    <string name="description_unlocks">Unlock Statistics</string>
    <!-- Toast strings  -->
    <string name="toast_profile_incomplete">Some contents seem to be not set. Please check the form and try again.</string>
    <string name="toast_grant_permission">Search for Quit and click the switch</string>

</resources>
