<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~     Copyright (c) 2020. by Darshan. All rights reserved                                                 ~
  ~                                                                                                         ~
  ~     The file "activity_main_drawer.xml" is a part of the project "Quit"                                 ~
  ~                                                                                                         ~
  ~     Quit is free software: you can redistribute it and/or modify                                        ~
  ~     it under the terms of the GNU General Public License as published by                                ~
  ~     the Free Software Foundation, either version 3 of the License, or                                   ~
  ~     (at your option) any later version.                                                                 ~
  ~                                                                                                         ~
  ~     Project Quit is distributed in the hope that it will be useful,                                     ~
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of                                      ~
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                                       ~
  ~     GNU General Public License for more details.                                                        ~
  ~                                                                                                         ~
  ~     You should have received a copy of the GNU General Public License                                   ~
  ~     along with Project Quit.  If not, see <https://www.gnu.org/licenses/>.                              ~
  ~                                                                                                         ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--    Menu for Drawer  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:title="@string/options"
        app:itemTextAppearance="?android:attr/textAppearanceLarge">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_progress"
                    android:icon="@drawable/ic_progress"
                    android:title="@string/menu_progress" />
                <item
                    android:id="@+id/nav_facilities"
                    android:icon="@drawable/ic_facilities"
                    android:title="@string/menu_facilities" />
                <item
                    android:id="@+id/nav_tips"
                    android:icon="@drawable/ic_tips"
                    android:title="@string/menu_tips" />
            </group>
        </menu>
    </item>
    <item
        android:title="@string/application"
        app:itemTextAppearance="?android:attr/textAppearanceLarge">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_policies"
                    android:icon="@drawable/ic_policies"
                    android:title="@string/menu_policies" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/menu_about" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/menu_share" />
            </group>
        </menu>
    </item>
</menu>