<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.MakeProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_9">

        <TextView
            android:id="@+id/pmv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_9"
            android:text="@string/make_profile_1"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/nameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_9"
            android:text="@string/dummy"
            android:textSize="@dimen/dimen_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <AutoCompleteTextView
            android:id="@+id/professionProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="profession"
            android:hint="@string/profile_hint_profession"
            android:maxLines="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_hint_age"
                android:textSize="@dimen/dimen_18" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/ageProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/profile_hint_age"
                android:hint="@string/profile_hint_age"
                android:inputType="number"
                android:maxLength="2" />

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_hint_gender"
                android:textSize="@dimen/dimen_18" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/genderProfile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_hint_picture"
            android:textSize="@dimen/dimen_18" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <ImageButton
            android:id="@+id/pictureProfile"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:contentDescription="@string/profile_hint_picture"
            android:scaleType="fitCenter"
            android:src="@drawable/pikachu" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/profileSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_mp"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>