<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.QuoteTheme">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_drawable"
        android:orientation="vertical"
        android:padding="@dimen/dimen_9"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/messagePopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy"
            android:textAlignment="center"
            android:textColor="@color/rich_black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/quoteIcon1"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:contentDescription="@string/image"
            android:rotation="180"
            app:srcCompat="@drawable/quote" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dummy"
            android:textAlignment="viewEnd"
            android:textColor="@color/trypan_blue"
            android:textSize="21sp"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/quoteIcon2"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="end"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/quote" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/dimen_12"
            android:text="@string/nav_header_title"
            android:textColor="@color/old_gold"
            android:textSize="27sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_21" />

        <Button
            android:id="@+id/okPopup"
            android:layout_width="@dimen/dimen_108"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_popup_button"
            android:text="@string/ok"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>